# chat-with-documents

./: Dockerfile  README.md  chatbot.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt  retrieve.py
app/: main.py  tasks.py
app/api/v1/: auth.py  chat.py  documents.py  projects.py
app/auth/: jwt.py  schemas.py
app/core/: config.py  dependencies.py
app/db/: crud.py  database.py  models.py  schemas.py
app/services/: rag_service.py  storage_service.py
data/books/: README.md
frontend/: app.py
